Add build and test with github actions